Fix spacing on rescan area

--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -261,7 +261,7 @@
 }
 
 .rescan-progress-indicator {
-  margin: -14px 0px 10px -40px;
+  margin: -14px 0px 10px -20px;
   width: @sidebar-width;
 }
 
